// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`use case card should render use case card component for observability 1`] = `
<EuiCard
  betaBadgeProps={
    Object {
      "label": "observe",
    }
  }
  description={
    <EuiText
      size="s"
      textAlign="center"
    >
      <p>
        testDescription
      </p>
    </EuiText>
  }
  display="subdued"
  footer={
    <span>
      testFooter
    </span>
  }
  image={
    <EuiImage
      alt="Observability logo"
    />
  }
  textAlign="left"
  title={
    <EuiText
      textAlign="center"
    >
      <h4>
        <strong>
          testTitle
        </strong>
      </h4>
    </EuiText>
  }
/>
`;

exports[`use case card should render use case card component for search 1`] = `
<EuiCard
  betaBadgeProps={
    Object {
      "label": "search",
    }
  }
  description={
    <EuiText
      size="s"
      textAlign="center"
    >
      <p>
        testDescription
      </p>
    </EuiText>
  }
  display="subdued"
  footer={
    <span>
      testFooter
    </span>
  }
  image={
    <EuiImage
      alt="Enterprise Search logo"
    />
  }
  textAlign="left"
  title={
    <EuiText
      textAlign="center"
    >
      <h4>
        <strong>
          testTitle
        </strong>
      </h4>
    </EuiText>
  }
/>
`;

exports[`use case card should render use case card component for security 1`] = `
<EuiCard
  betaBadgeProps={
    Object {
      "label": "security",
    }
  }
  description={
    <EuiText
      size="s"
      textAlign="center"
    >
      <p>
        testDescription
      </p>
    </EuiText>
  }
  display="subdued"
  footer={
    <span>
      testFooter
    </span>
  }
  image={
    <EuiImage
      alt="Security logo"
    />
  }
  textAlign="left"
  title={
    <EuiText
      textAlign="center"
    >
      <h4>
        <strong>
          testTitle
        </strong>
      </h4>
    </EuiText>
  }
/>
`;
